<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Win8Style</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="work_attendance">工作考勤</string>
    <string name="business_trip">出差考勤</string>
    <string name="visi_customers_registration">拜访客户登记</string>
    <string name="other_attendance">其他考勤</string>
    
    
    
    <string name="business_trip_no">差旅单号:</string>
    <string name="business_trip_no_hint">请输入差旅单号</string>
    <string name="attendance_type">上报类型:</string>
    <string name="current_type">当前状态:</string>
    <string name="jiedairen">接待人:</string>
    <string name="jiedairen_hint">请输入接待人姓名</string>
    <string name="miaoshu">描述信息:</string>
    <string name="miaoshu_hint">请输入描述信息</string>
    <string name="nothing">无</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_photo">拍照</string>

</resources>