<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearlayout01"
        android:layout_width="fill_parent"
        android:layout_height="120dip"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/work_attendance"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:background="@color/principal_value"
            android:gravity="center"
            android:text="@string/business_trip"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout02"
        android:layout_width="fill_parent"
        android:layout_height="120dip"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@color/textLabelColor"
            android:gravity="center"
            android:text="@string/visi_customers_registration"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout03"
        android:layout_width="fill_parent"
        android:layout_height="120dip"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="@color/orchid"
            android:gravity="center"
            android:text="@string/other_attendance"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:background="@color/greenyellow"
            android:gravity="center"
            android:text="@string/hello_world"
            android:textColor="@color/white"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>